# spec2sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  merge-checks.yml  publish.yml  rebase.yml
spec2sdk/client/: views.py
spec2sdk/client/templates/: api.j2  http_client.j2
spec2sdk/generators/models/: renderers.py
spec2sdk/models/: converters.py  entities.py  generators.py
spec2sdk/openapi/: entities.py  parsers.py  resolver.py
spec2sdk/parsers/: resolver.py
tests/: test_identifiers.py  test_registry.py
tests/generators/: test_identifiers.py
tests/parsers/resolver/: test_resolver.py
tests/parsers/resolver/test_data/circular_reference/: api.yml
tests/parsers/resolver/test_data/references_with_siblings/expected_output/: schema.json
tests/parsers/resolver/test_data/references_with_siblings/input/: api.yml
tests/parsers/resolver/test_data/schema_cache/: api.yml
tests/parsers/resolver/test_data/url_references/input/: api.yml
tests/resolver/: test_resolver.py
tests/resolver/test_data/circular_reference/: api.yml
tests/resolver/test_data/local_references/expected_output/: schema.json
tests/resolver/test_data/local_references/input/: api.yml
tests/resolver/test_data/references_with_siblings/expected_output/: schema.json
tests/resolver/test_data/references_with_siblings/input/: api.yml
tests/resolver/test_data/remote_references/input/: api.yml
tests/resolver/test_data/schema_cache/: api.yml
tests/resolver/test_data/url_references/expected_output/: schema.json
tests/resolver/test_data/url_references/input/: api.yml
(+6 files in other folders)
